--- a/src/css/main.css
+++ b/src/css/main.css
@@ -48,7 +48,7 @@ a,
   width: 100%;
   height: 100%;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-grow: 1;
 }
 
