--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,8 +47,9 @@ a,
   display: flex;
   width: 100%;
   height: 100%;
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
   flex-grow: 1;
 }
 
